2010-12-02  Lin Ma  <lin.ma@oracle.com>

	* configure.in: bump to 1.155.0

2010-12-02  Lin Ma  <lin.ma@oracle.com>

	* capplet/capplet-utils.c
	(nwam_disable_ok_on_cell_editing_started),
	(nwam_enable_ok_on_cell_canceled):
	* capplet/nwam_conn_conf_ip_panel.c: Clean unused code.
	* capplet/nwam_env_pref_dialog.c (populate_panels_from_env),
	(on_ns_selection_clicked), (on_ns_text_changed): Fixed typing in
	default domain does not update nis/ldap domain parallelly. Fixed
	enable ldap causes nis manual rb is changed to dhcp rb.

2010-12-01  Lin Ma  <lin.ma@oracle.com>

	* capplet/nwam_object_ctrl_iface.c
	(nwam_object_ctrl_iface_base_init),
	(nwam_object_ctrl_iface_class_init),
	(nwam_object_ctrl_iface_get_type), (nwam_object_ctrl_create),
	(nwam_object_ctrl_remove), (nwam_object_ctrl_rename),
	(nwam_object_ctrl_edit), (nwam_object_ctrl_dup):
	* capplet/nwam_object_ctrl_iface.h: New interface for control object
	in nwam tree view.

2010-12-01  Lin Ma  <lin.ma@oracle.com>

	* capplet/Makefile.am:
	* capplet/capplet-utils.c
	(capplet_list_foreach_merge_to_list_store), (nwam_ip_address_cell),
	(nwam_ip_subnet_cell), (nwam_ipv4_address_cell_edited),
	(nwam_ipv4_subnet_cell_edited), (nwam_ipv6_address_cell_edited),
	(nwam_ipv6_subnet_cell_edited),
	(nwam_reset_entry_validation_on_cell_editing_started),
	(nwam_disable_ok_on_cell_editing_started),
	(nwam_enable_ok_on_cell_edited), (nwam_enable_ok_on_cell_canceled):
	* capplet/capplet-utils.h: Add more tool functions for display
	general object information in tree view.
	* capplet/main.c (customwidgethandler), (main): Make all list tree
	views are created from nwam_tree_view.
	* capplet/nwam_condition_vbox.c (table_models_refresh): Updated
	due to capplet tool interfaces change.
	* capplet/nwam_conn_conf_ip_panel.c (create_object),
	(remove_object), (edit_object), (nwam_object_ctrl_init),
	(nwam_compose_wifi_fav_view), (nwam_compose_multi_ip_tree_view),
	(nwam_conf_ip_panel_init):