@@ -1,3 +1,8 @@
+2011-01-28  Lin Ma  <lin.ma@oracle.com>
+
+	* configure.in:
+	* help/C/nwam-manager.xml: bump to 1.159.0. Updated OLH.
+
 2010-12-02  Lin Ma  <lin.ma@oracle.com>
 
 	* configure.in: bump to 1.155.0
